Enum oauth_provider {
  kook
  discord
}

Enum oauth_account_status {
  active
  unbound
}

Enum albion_server {
  asia
  europe
  america
}

Enum application_status {
  pending
  approved
  rejected
}

Enum guild_status {
  active
  archived
}

Enum guild_member_binding_type {
  platform_user
  game_character
}

Enum guild_member_status {
  active
  inactive
}

Enum reimbursement_session_status {
  open
  completed
  closed
}

Enum rule_match_mode {
  all
  any
}

Enum rule_action {
  approve
  reject
}

Enum battle_record_source {
  albion_killboard
  manual
  custom
}

Enum reimbursement_record_status {
  pending_submission
  pending_review
  approved
  rejected
  completed
}

Enum reimbursement_auto_decision {
  none
  approved
  rejected
}

Enum reimbursement_log_action_type {
  session_created
  manual_review
  auto_rule
}

Table users {
  id text [pk]
  email text [unique]
  email_verified integer [not null, default: 0, note: 'boolean']
  password_hash text
  password_salt text
  password_updated_at integer [note: 'timestamp']
  current_game_character_id text [note: '业务上指向 game_characters.id，当前 schema 未声明外键']
  is_admin integer [not null, default: 0, note: 'boolean']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']
}

Table oauth_accounts {
  id text [pk]
  user_id text [not null]
  provider oauth_provider [not null]
  provider_account_id text
  provider_account_name text
  status oauth_account_status [not null, default: 'active']
  last_bound_at integer [not null, note: 'timestamp']
  unbound_at integer [note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (user_id, provider) [unique, name: 'unq_oauth_user_provider']
    (provider, provider_account_id) [unique, name: 'unq_oauth_provider_account']
  }
}

Table game_character_binding_applications {
  id text [pk]
  user_id text [not null]
  server albion_server [not null]
  game_account_id text [not null]
  game_character_name text
  binding_token text [not null]
  status application_status [not null, default: 'pending']
  reviewed_by text
  review_note text
  reviewed_at integer [note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (user_id, server, game_account_id) [unique, name: 'unq_game_account_binding']
    binding_token [unique, name: 'unq_game_binding_token']
  }
}

Table game_characters {
  id text [pk]
  application_id text [not null]
  user_id text [not null]
  server albion_server [not null]
  game_account_id text [not null]
  character_name text
  approved_at integer [not null, note: 'timestamp']
  created_at integer [not null, note: 'timestamp']

  indexes {
    application_id [unique, name: 'unq_game_character_application']
    (server, game_account_id) [unique, name: 'unq_game_character_account']
  }
}

Table guild_registration_applications {
  id text [pk]
  applicant_user_id text [not null]
  guild_name text [not null]
  server albion_server [not null]
  binding_token text [not null]
  status application_status [not null, default: 'pending']
  reviewed_by text
  review_note text
  reviewed_at integer [note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (applicant_user_id, server, guild_name) [unique, name: 'unq_guild_application']
    binding_token [unique, name: 'unq_guild_application_token']
  }
}

Table guilds {
  id text [pk]
  application_id text [not null]
  owner_user_id text [not null]
  guild_name text [not null]
  server albion_server [not null]
  binding_token text [not null]
  status guild_status [not null, default: 'active']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    application_id [unique, name: 'unq_guild_application_id']
    (server, guild_name) [unique, name: 'unq_guild_name_server']
    binding_token [unique, name: 'unq_guild_binding_token']
  }
}

Table guild_permissions {
  id text [pk]
  guild_id text [not null]
  permission_key text [not null]
  permission_name text [not null]
  description text
  is_system integer [not null, default: 1, note: 'boolean']
  created_at integer [not null, note: 'timestamp']

  indexes {
    (guild_id, permission_key) [unique, name: 'unq_guild_permission_key']
  }
}

Table guild_roles {
  id text [pk]
  guild_id text [not null]
  role_name text [not null]
  is_system integer [not null, default: 0, note: 'boolean']
  is_default_admin integer [not null, default: 0, note: 'boolean']
  can_delete integer [not null, default: 1, note: 'boolean']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (guild_id, role_name) [unique, name: 'unq_guild_role_name']
  }
}

Table guild_role_permissions {
  id text [pk]
  role_id text [not null]
  permission_id text [not null]
  created_at integer [not null, note: 'timestamp']

  indexes {
    (role_id, permission_id) [unique, name: 'unq_guild_role_permission']
  }
}

Table guild_members {
  id text [pk]
  guild_id text [not null]
  binding_type guild_member_binding_type [not null]
  platform_user_id text
  game_character_id text
  invited_by_user_id text
  status guild_member_status [not null, default: 'active']
  joined_at integer [not null, note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (guild_id, platform_user_id) [unique, name: 'unq_guild_member_platform_user']
    (guild_id, game_character_id) [unique, name: 'unq_guild_member_game_character']
  }
}

Table guild_member_roles {
  id text [pk]
  member_id text [not null]
  role_id text [not null]
  created_at integer [not null, note: 'timestamp']

  indexes {
    (member_id, role_id) [unique, name: 'unq_guild_member_role']
  }
}

Table guild_member_boxes {
  id text [pk]
  guild_member_id text [not null]
  coordinate_x integer [not null]
  coordinate_y integer [not null]
  updated_at integer [not null, note: 'timestamp']

  indexes {
    guild_member_id [unique, name: 'unq_guild_member_box']
  }
}

Table reimbursement_sessions {
  id text [pk]
  guild_id text [not null]
  title text [not null]
  description text
  status reimbursement_session_status [not null, default: 'open']
  created_by_user_id text [not null]
  closed_by_user_id text
  closed_at integer [note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']
}

Table reimbursement_auto_approval_rules {
  id text [pk]
  guild_id text [not null]
  rule_name text [not null]
  description text
  enabled integer [not null, default: 1, note: 'boolean']
  priority integer [not null, default: 100]
  match_mode rule_match_mode [not null, default: 'all']
  action rule_action [not null]
  note_template text
  conditions_json text [not null]
  created_by_user_id text [not null]
  updated_by_user_id text [not null]
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (guild_id, rule_name) [unique, name: 'unq_guild_auto_approval_rule_name']
  }
}

Table battle_records {
  id text [pk]
  guild_id text [not null]
  imported_by_user_id text [not null]
  external_record_id text [not null]
  external_battle_id text
  battle_name text
  source battle_record_source [not null, default: 'custom']
  occurred_at integer [not null, note: 'timestamp']
  is_death integer [not null, default: 1, note: 'boolean']
  reimbursement_session_id text
  guild_member_id text
  game_character_id text
  victim_game_account_id text
  victim_character_name text [not null]
  total_estimated_value integer [not null, default: 0]
  equipment_items_json text [not null]
  tags_json text
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    (guild_id, external_record_id) [unique, name: 'unq_guild_external_battle_record']
  }
}

Table reimbursement_records {
  id text [pk]
  guild_id text [not null]
  session_id text [not null]
  battle_record_id text [not null]
  guild_member_id text
  game_character_id text
  applicant_user_id text
  status reimbursement_record_status [not null, default: 'pending_submission']
  auto_decision reimbursement_auto_decision [not null, default: 'none']
  reimbursement_amount integer
  latest_note text
  last_reviewed_by text
  last_reviewed_at integer [note: 'timestamp']
  created_at integer [not null, note: 'timestamp']
  updated_at integer [not null, note: 'timestamp']

  indexes {
    battle_record_id [unique, name: 'unq_reimbursement_battle_record']
  }
}

Table reimbursement_approval_logs {
  id text [pk]
  guild_id text [not null]
  reimbursement_record_id text [not null]
  from_status reimbursement_record_status
  to_status reimbursement_record_status [not null]
  action_type reimbursement_log_action_type [not null]
  operated_by_user_id text
  auto_approval_rule_id text
  note text
  metadata_json text
  created_at integer [not null, note: 'timestamp']
}

Ref: oauth_accounts.user_id > users.id
Ref: game_character_binding_applications.user_id > users.id
Ref: game_character_binding_applications.reviewed_by > users.id
Ref: game_characters.application_id > game_character_binding_applications.id
Ref: game_characters.user_id > users.id
Ref: guild_registration_applications.applicant_user_id > users.id
Ref: guild_registration_applications.reviewed_by > users.id
Ref: guilds.application_id > guild_registration_applications.id
Ref: guilds.owner_user_id > users.id
Ref: guild_permissions.guild_id > guilds.id
Ref: guild_roles.guild_id > guilds.id
Ref: guild_role_permissions.role_id > guild_roles.id
Ref: guild_role_permissions.permission_id > guild_permissions.id
Ref: guild_members.guild_id > guilds.id
Ref: guild_members.platform_user_id > users.id
Ref: guild_members.game_character_id > game_characters.id
Ref: guild_members.invited_by_user_id > users.id
Ref: guild_member_roles.member_id > guild_members.id
Ref: guild_member_roles.role_id > guild_roles.id
Ref: guild_member_boxes.guild_member_id > guild_members.id
Ref: reimbursement_sessions.guild_id > guilds.id
Ref: reimbursement_sessions.created_by_user_id > users.id
Ref: reimbursement_sessions.closed_by_user_id > users.id
Ref: reimbursement_auto_approval_rules.guild_id > guilds.id
Ref: reimbursement_auto_approval_rules.created_by_user_id > users.id
Ref: reimbursement_auto_approval_rules.updated_by_user_id > users.id
Ref: battle_records.guild_id > guilds.id
Ref: battle_records.imported_by_user_id > users.id
Ref: battle_records.reimbursement_session_id > reimbursement_sessions.id
Ref: battle_records.guild_member_id > guild_members.id
Ref: battle_records.game_character_id > game_characters.id
Ref: reimbursement_records.guild_id > guilds.id
Ref: reimbursement_records.session_id > reimbursement_sessions.id
Ref: reimbursement_records.battle_record_id > battle_records.id
Ref: reimbursement_records.guild_member_id > guild_members.id
Ref: reimbursement_records.game_character_id > game_characters.id
Ref: reimbursement_records.applicant_user_id > users.id
Ref: reimbursement_records.last_reviewed_by > users.id
Ref: reimbursement_approval_logs.guild_id > guilds.id
Ref: reimbursement_approval_logs.reimbursement_record_id > reimbursement_records.id
Ref: reimbursement_approval_logs.operated_by_user_id > users.id
Ref: reimbursement_approval_logs.auto_approval_rule_id > reimbursement_auto_approval_rules.id
